--- a/.github/workflows/waka_workflow.yml
+++ b/.github/workflows/waka_workflow.yml
@@ -3,8 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    - cron: '0 */4 * * *'
 
 jobs:
   update-readme:
@@ -15,8 +14,8 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
-          BLOCKS: ->
+          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
           TIME_RANGE: all_time
           SHOW_TIME: true
+          SHOW_TOTAL: true
           SHOW_MASKED_TIME: true
-          LANG_COUNT: 10
